support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_nobase.i
%module xxx

class Foo : public Bar {
};

class Spam : public Bar<int> {
};
